--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-@import url(lib/frameworks/normalize/normalize-2.0-min.css);
-@import url(lib/frameworks/h5bp/html5-css-4.0.0-min.css);
+@import url(lib/frameworks/normalize/normalize-stable-min.css);
+@import url(lib/frameworks/h5bp/html5-css-stable-min.css);
 /* Bootstrap already do provide these */
 @import url(lib/frameworks/bootstrap/stable/css/bootstrap.core-stable-min.css);
 @import url(lib/frameworks/bootstrap/stable/css/bootstrap.responsive-stable-min.css);
